add notifications to frontend
